--- a/.env.sample
+++ b/.env.sample
@@ -28,8 +28,11 @@ UI_TITLE=
 UI_LOGO=
 UI_CHAT_LOGO=
 UI_CHAT_TITLE=
+UI_CHAT_WELCOME_MESSAGE=
 UI_CHAT_DESCRIPTION=
 UI_FAVICON=
+UI_INDEX_ITEMS=
+UI_SYSTEM_MESSAGE=
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
